@@ -50,6 +50,7 @@ Version 1.9.1+svn:
      Filtering for terrain can be done with the [terrain][and]terrain=
      workaround.
    * Renamed [removeitem] to [remove_item].
+   * added new parameters directional_x and directional_y to animations
  * Miscellaneous and bugfixes:
    * Changed: Lowered severity of some gui2 timer log messages.
    * Units created in debug mode now play their recruit animation (FR #16766).
